--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,11 @@ mark {
 
 .image-preview {
     display: block;
-    margin: 2em auto;
-    width: 50%;
+    margin: 4em auto;
+    width: 75%;
     height: auto;
+}
+
+.caption  {
+    margin: 2em auto;
 }
